# crm_ur_moveit_resources

./: .gitignore  README.md
crm_control/: CMakeLists.txt
crm_control/launch/: dual_ur_control.launch.py  rsp.launch.py  start_robot.launch.py  ur_control.launch.py
crm_control/urdf/: crm_controlled.urdf.xacro
crm_description/: CMakeLists.txt  package.xml
crm_description/launch/: view_dual_ur.launch.py  view_ur.launch.py
crm_description/rviz/: urdf.rviz
crm_description/urdf/: crm.urdf.xacro  crm_dual_macro.xacro  crm_macro.xacro
crm_dual_robot_cell/crm_description/: CMakeLists.txt  package.xml
crm_dual_robot_cell/crm_description/urdf/: crm_dual.urdf.xacro  crm_dual_macro.xacro  crm_macro.xacro
crm_dual_robot_cell/crm_dual_control/: CMakeLists.txt  package.xml
crm_dual_robot_cell/crm_dual_control/config/: alice_initial_positions.yaml  bob_initial_positions.yaml  left_ur3_controllers.yaml  right_ur3_controllers.yaml
crm_dual_robot_cell/crm_dual_control/launch/: rsp.launch.py  start_robot.launch.py  start_robots.launch.py  ur_control.launch.py
crm_dual_robot_cell/crm_dual_control/urdf/: crm_dual_controlled.urdf.xacro
crm_dual_robot_cell/crm_dual_description/: CMakeLists.txt  package.xml
crm_dual_robot_cell/crm_dual_description/launch/: view_dual_ur.launch.py  view_robot.launch.py
crm_dual_robot_cell/crm_dual_description/meshes/: end_effector_updated_bltouch.stl  laser_profiler.stl
crm_dual_robot_cell/crm_dual_description/rviz/: urdf.rviz
crm_dual_robot_cell/crm_dual_description/urdf/: crm.urdf.xacro  crm_dual.urdf.xacro  crm_dual_macro.xacro
crm_dual_robot_cell/crm_dual_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crm_dual_robot_cell/crm_dual_moveit_config/config/: bob_bltouch_servo.yaml  both_controllers.yaml  crm_dual.srdf  crm_robot.ros2_control.xacro  crm_robot.srdf  crm_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
crm_dual_robot_cell/crm_dual_moveit_config/launch/: demo.launch.py  dual_ur_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
crm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crm_moveit_config/config/: crm_robot.srdf  joint_limits.yaml  moveit_controllers.yaml
crm_moveit_config/launch/: moveit_rviz.launch.py
crm_single_robot_cell/crm_control/: CMakeLists.txt  package.xml
crm_single_robot_cell/crm_control/launch/: rsp.launch.py  start_robot.launch.py
crm_single_robot_cell/crm_control/urdf/: crm_controlled.urdf.xacro
crm_single_robot_cell/crm_description/: CMakeLists.txt  package.xml
crm_single_robot_cell/crm_description/config/: initial_positions.yaml
crm_single_robot_cell/crm_description/launch/: view_robot.launch.py  view_ur.launch.py
crm_single_robot_cell/crm_description/rviz/: urdf.rviz  view_robot.rviz
crm_single_robot_cell/crm_description/urdf/: crm.urdf.xacro  crm_dual.urdf.xacro  crm_macro.xacro  ur_macro.xacro
crm_single_robot_cell/crm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crm_single_robot_cell/crm_moveit_config/config/: crm_robot.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  notebook.yaml  pilz_cartesian_limits.yaml  ur_servo.yaml
crm_single_robot_cell/crm_moveit_config/examples/: example1.cpp  example2.cpp  example3.cpp  example3.py  example4.cpp  test-roll-motion.cpp
crm_single_robot_cell/crm_moveit_config/launch/: move_group.launch.py  setup_assistant.launch.py  ur_moveit.launch.py
crm_single_robot_cell/crm_moveit_config/src/: end_effector_velocity.cpp
my_dual_robot_cell/my_dual_robot_cell_description/meshes/: bench_simplified_corrected.stl  end_effector.stl
my_dual_robot_cell/my_dual_robot_cell_description/rviz/: urdf.rviz
my_dual_robot_cell/my_dual_robot_cell_description/urdf/: crm_dual_macro.xacro
ur_description/: package.xml
ur_description/config/ur3/: visual_parameters.yaml
ur_description/launch/: view_ur.launch.py
ur_description/urdf/: ur.urdf.xacro  ur3.urdf
ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  notebook.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ur_servo.yaml
ur_moveit_config/launch/: dual_ur_moveit.launch.py  ur_moveit.launch.py
ur_moveit_config/srdf/: ur.srdf  ur_macro.srdf.xacro
